--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "jest": "jest __test__/*.spec.ts --coverage"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.11",
     "jest": "^24.5.0",
     "rollup": "^1.6.0",
