--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "universal-toolbox",
   "version": "0.0.9",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "license": "MIT",
   "scripts": {
     "dev": "rollup -c -w",
