--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@redchili/toolkit",
-  "version": "1.0.0",
+  "version": "1.0.1-beta.0",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "license": "MIT",
@@ -23,5 +23,8 @@
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "files": [
+    "dist"
+  ]
 }
