--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
             "autoFix": true
         },
     ],
-    "files.autoSave": "onWindowChange"
+    "files.autoSave": "onWindowChange",
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
