--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "jest": "jest __test__/*.spec.ts --coverage"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.11",
+    "eslint": "^6.6.0",
     "jest": "^24.5.0",
     "rollup": "^1.6.0",
     "rollup-plugin-filesize": "^6.0.1",
@@ -23,7 +25,9 @@
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash.isequal": "^4.5.0"
+  },
   "files": [
     "dist"
   ]
