--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
+    "@redchili/eslint-config-airbnb-typescript-prettier": "^1.0.4",
     "@types/jest": "^24.0.11",
-    "eslint": "^6.6.0",
+    "@types/qs": "^6.9.3",
+    "@types/react": "^16.9.0",
     "jest": "^24.5.0",
     "rollup": "^1.6.0",
     "rollup-plugin-filesize": "^6.0.1",
     "rollup-plugin-typescript2": "^0.20.1",
     "ts-jest": "^24.0.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.9.5"
   },
   "dependencies": {
     "@types/lodash.isequal": "^4.5.5",
-    "lodash.isequal": "^4.5.0"
+    "lodash.isequal": "^4.5.0",
+    "qs": "^6.9.4"
   },
   "peerDependencies": {
     "@types/lodash.isequal": "^4.5.5",
