--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@redchili/toolkit",
-  "version": "1.0.2-beta.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "license": "MIT",
